--- a/style.css
+++ b/style.css
@@ -23,3 +23,23 @@ h1 {
 #playAgain {
     display: none;
 }
+
+@media (max-width: 640px) and (min-width: 375px) {
+    .header {
+        font-size: calc(1.525rem + 3.5vw);
+    }
+
+    .buttons {
+        font-size: calc(1.525rem + 0.1vw);
+        position: relative;
+        bottom: 20rem !important;
+    }
+}
+
+@media (max-width: 375px) {
+    .buttons {
+        font-size: calc(1.3rem + 0.1vw);
+        position: relative;
+        bottom: 7rem !important;
+    }
+}
